--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
                 <!--logo-->
                 <a href="./index.html" class="header-logo">Web<span class="header-logo-accent">Studio</span></a>
 
+                <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+                    <svg width="24" height="24">
+                        <use href="./images/icons.svg"></use>
+                    </svg>
+                </button>
+
                 <ul class="header-nav-list">
                     <li class="header-nav-list-item">
                         <a href="./index.html" class="header-nav-link current">Studio</a>
@@ -58,15 +64,15 @@
     <!--Main-->
     <main>
         <!--1 Effective Solutions for Your Business-->
-        <section class="main-section">
+        <!-- <section class="main-section">
             <div class="hero-container container">
                 <h1 class="title">Effective Solutions for Your Business</h1>
                 <button data-modal-open type="button" class="main-section-button">Order Service</button>
             </div>
-        </section>
+        </section> -->
 
         <!--2 Principles-->
-        <section class="principles">
+        <!-- <section class="principles">
             <div class="container">
                 <h2 class="principles-title visually-hidden">Principles</h2>
                 <ul class="principles-list">
@@ -120,10 +126,10 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
 
         <!--3 What are we doing-->
-        <section class="products">
+        <!-- <section class="products">
             <div class="container">
                 <h2 class="products-title">What are we doing</h2>
                 <ul class="list products-list">
@@ -138,10 +144,10 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
 
         <!--4 Our Team-->
-        <section class="team-section">
+        <!-- <section class="team-section">
             <div class="container">
                 <h2 class="team-section-title">Our Team</h2>
                 <ul class="team-section-list">
@@ -295,10 +301,10 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
 
         <!-- 5 Customers -->
-        <section class="customers">
+        <!-- <section class="customers">
             <div class="container">
                 <h2 class="customers-title">Customers</h2>
                 <ul class="customers-list">
@@ -346,11 +352,11 @@
                     </li>
                 </ul>
             </div>
-        </section>
+        </section> -->
     </main>
 
     <!--Footer-->
-    <footer class="footer">
+    <!-- <footer class="footer">
         <div class="container footer-wrap">
             <div class="footer-left">
                 <a href="./index.html" class="footer-link">Web<span class="footer-logo-accent">Studio</span></a>
@@ -409,7 +415,7 @@
 
             </div>
         </div>
-    </footer>
+    </footer> -->
 
     <!-- Modal Pop-Up -->
     <div class="backdrop is-hidden" data-modal>
