media.css added
all section except 2nd commented

--- a/index.html
+++ b/index.html
@@ -4,27 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>WebStudio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-        integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/media.css">
 </head>
 
 <body>
 
     <!--Header-->
-    <header class="header">
+    <!-- <header class="header">
         <div class="header-container container">
-            <!--Navigation menu-->
+            
             <nav class="header-nav">
-                <!--logo-->
+                
                 <a href="./index.html" class="header-logo">Web<span class="header-logo-accent">Studio</span></a>
 
                 <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
@@ -46,7 +45,6 @@
                 </ul>
             </nav>
 
-            <!--Contacts-->
             <address class="header-address">
                 <ul class="header-address-list">
                     <li class="header-address-list-item">
@@ -59,7 +57,7 @@
             </address>
         </div>
 
-    </header>
+    </header> -->
 
     <!--Main-->
     <main>
@@ -72,7 +70,7 @@
         </section> -->
 
         <!--2 Principles-->
-        <!-- <section class="principles">
+        <section class="principles">
             <div class="container">
                 <h2 class="principles-title visually-hidden">Principles</h2>
                 <ul class="principles-list">
@@ -126,7 +124,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
 
         <!--3 What are we doing-->
         <!-- <section class="products">
@@ -418,7 +416,7 @@
     </footer> -->
 
     <!-- Modal Pop-Up -->
-    <div class="backdrop is-hidden" data-modal>
+    <!-- <div class="backdrop is-hidden" data-modal>
         <div class="modal">
 
             <button data-modal-close class="modal-btn" type="button">
@@ -485,7 +483,7 @@
             </form>
 
         </div>
-    </div>
+    </div> -->
 
     <script src="./js/modal.js"></script>
 </body>
