section 3 adaptive complete

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         </section>
 
         <!--3 What are we doing-->
-        <!-- <section class="products">
+        <section class="products">
             <div class="container">
                 <h2 class="products-title">What are we doing</h2>
                 <ul class="list products-list">
@@ -144,7 +144,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
 
         <!--4 Our Team-->
         <!-- <section class="team-section">
