--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         </section>
 
         <!--4 Our Team-->
-        <!-- <section class="team-section">
+        <section class="team-section">
             <div class="container">
                 <h2 class="team-section-title">Our Team</h2>
                 <ul class="team-section-list">
@@ -301,7 +301,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
 
         <!-- 5 Customers -->
         <!-- <section class="customers">
