section 5 adaptive complete

--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
         </section>
 
         <!-- 5 Customers -->
-        <!-- <section class="customers">
+        <section class="customers">
             <div class="container">
                 <h2 class="customers-title">Customers</h2>
                 <ul class="customers-list">
@@ -352,7 +352,7 @@
                     </li>
                 </ul>
             </div>
-        </section> -->
+        </section>
     </main>
 
     <!--Footer-->
