footer adaptive (except 1158px)

--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
     </main>
 
     <!--Footer-->
-    <!-- <footer class="footer">
+    <footer class="footer">
         <div class="container footer-wrap">
             <div class="footer-left">
                 <a href="./index.html" class="footer-link">Web<span class="footer-logo-accent">Studio</span></a>
@@ -415,7 +415,7 @@
 
             </div>
         </div>
-    </footer> -->
+    </footer>
 
     <!-- Modal Pop-Up -->
     <!-- <div class="backdrop is-hidden" data-modal>
