hero section adaptive complete

--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
     <!--Main-->
     <main>
         <!--1 Effective Solutions for Your Business-->
-        <!-- <section class="main-section">
+        <section class="main-section">
             <div class="hero-container container">
                 <h1 class="title">Effective Solutions for Your Business</h1>
                 <button data-modal-open type="button" class="main-section-button">Order Service</button>
             </div>
-        </section> -->
+        </section>
 
         <!--2 Principles-->
         <section class="principles">
