--- a/index.html
+++ b/index.html
@@ -134,13 +134,16 @@
                 <h2 class="products-title">What are we doing</h2>
                 <ul class="list products-list">
                     <li class="products-list-item">
-                        <img src="./images/img_1.jpg" alt="desktop" width="360" height="300">
+                        <img srcset="./images/img_1.jpg 1x, ./images/img_1-2x.jpg 2x" src="./images/img_1.jpg"
+                            alt="desktop" width="360" height="300">
                     </li>
                     <li class="products-list-item">
-                        <img src="./images/img_2.jpg" alt="app" width="360" height="300">
+                        <img srcset="./images/img_2.jpg 1x, ./images/img_2-2x.jpg 2x" src="./images/img_2.jpg" alt="app"
+                            width="360" height="300">
                     </li>
                     <li class="products-list-item">
-                        <img src="./images/img_3.jpg" alt="all portfolio" width="360" height="300">
+                        <img srcset="./images/img_3.jpg 1x, ./images/img_3-2x.jpg 2x" src="./images/img_3.jpg"
+                            alt="all portfolio" width="360" height="300">
                     </li>
                 </ul>
             </div>
@@ -152,7 +155,8 @@
                 <h2 class="team-section-title">Our Team</h2>
                 <ul class="team-section-list">
                     <li class="team-list-item">
-                        <img src="./images/Product_designer.jpg" width="264" alt="Product Designer photo">
+                        <img srcset="./images/Product_designer.jpg 1x, ./images/Product_designer-2x.jpg 2x"
+                            src="./images/Product_designer.jpg" width="264" alt="Product Designer photo">
                         <div class="employee-container">
                             <h3 class="employee-name">Mark Guerrero</h3>
                             <p class="position">Product Designer</p>
@@ -189,7 +193,8 @@
                         </div>
                     </li>
                     <li class="team-list-item">
-                        <img src="./images/FE_developer.jpg" width="264" alt="Frontend Developer photo">
+                        <img srcset="./images/FE_developer.jpg 1x, ./images/FE_developer-2x.jpg 2x"
+                            src="./images/FE_developer.jpg" width="264" alt="Frontend Developer photo">
                         <div class="employee-container">
                             <h3 class="employee-name">Tom Ford</h3>
                             <p class="position">Frontend Developer</p>
@@ -226,7 +231,8 @@
                         </div>
                     </li>
                     <li class="team-list-item">
-                        <img src="./images/Marketing.jpg" width="264" alt="Marketing photo">
+                        <img srcset="./images/Marketing.jpg 1x, ./images/Marketing-2x.jpg 2x"
+                            src="./images/Marketing.jpg" width="264" alt="Marketing photo">
                         <div class="employee-container">
                             <h3 class="employee-name">Camila Garcia</h3>
                             <p class="position">Marketing</p>
@@ -263,7 +269,8 @@
                         </div>
                     </li>
                     <li class="team-list-item">
-                        <img src="./images/UI.jpg" width=264 alt="UI Designer photo">
+                        <img srcset="./images/UI.jpg 1x, ./images/UI-2x.jpg 2x" src="./images/UI.jpg" width="264"
+                            alt="UI Designer photo">
                         <div class="employee-container">
                             <h3 class="employee-name">Daniel Wilson</h3>
                             <p class="position">UI Designer</p>
