modal window adaptive

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </ul>
             </address>
 
-            <button class="menu-open-btn" aria-expanded="false" aria-controls="mobile-menu" data-menu-open>
+            <button class="menu-open-btn" data-menu-open>
                 <svg width="24" height="24" class="menu-open-icon">
                     <use href="./images/icons.svg#icon-gg_menu"></use>
                 </svg>
@@ -64,7 +64,7 @@
 
         <div class="mob-menu is-hidden" data-menu>
             <div>
-                <button class="menu-close-btn" aria-expanded="false" aria-controls="mobile-menu" data-menu-close>
+                <button class="menu-close-btn" data-menu-close>
                     <svg width="8" height="8" class="menu-close-icon">
                         <use href="./images/icons.svg#icon-close-black-18dp"></use>
                     </svg>
@@ -494,7 +494,7 @@
     </footer>
 
     <!-- Modal Pop-Up -->
-    <!-- <div class="backdrop is-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
         <div class="modal">
 
             <button data-modal-close class="modal-btn" type="button">
@@ -561,7 +561,7 @@
             </form>
 
         </div>
-    </div> -->
+    </div>
 
     <script src="./js/modal.js"></script>
     <script src="./js/mobile-menu.js"></script>
