correction portfolio.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,10 +29,10 @@
 
                 <ul class="header-nav-list">
                     <li class="header-nav-list-item">
-                        <a href="./index.html" class="header-nav-link current">Studio</a>
+                        <a href="./index.html" class="header-nav-link ">Studio</a>
                     </li>
                     <li class="header-nav-list-item">
-                        <a href="./portfolio.html" class="header-nav-link">Portfolio</a>
+                        <a href="./portfolio.html" class="header-nav-link current">Portfolio</a>
                     </li>
                     <li class="header-nav-list-item">
                         <a href="" class="header-nav-link">Contacts</a>
@@ -69,10 +69,10 @@
 
                 <ul class="mob-menu-list">
                     <li class="mob-menu-list-item">
-                        <a href="./index.html" class="mob-menu-link current-mob">Studio</a>
+                        <a href="./index.html" class="mob-menu-link">Studio</a>
                     </li>
                     <li class="mob-menu-list-item">
-                        <a href="./portfolio.html" class="mob-menu-link">Portfolio</a>
+                        <a href="./portfolio.html" class="mob-menu-link current-mob">Portfolio</a>
                     </li>
                     <li class="mob-menu-list-item">
                         <a href="" class="mob-menu-link">Contacts</a>
@@ -152,6 +152,7 @@
                         <button type="button" class="filter-button">Marketing</button>
                     </li>
                 </ul>
+
 
                 <!--* products-portfolio section -->
                 <ul class="products-portfolio-list">
